# server/api/v1/txyun/sms.go
@@ -156,7 +156,7 @@ func (e *SmsHandler) AddSmsProject(c *gin.Context) {
 // @Security  ApiKeyAuth
 // @accept    application/json
 // @Produce   application/json
-// @Param     data  body     smsmodel.DelSmsProjectReq  true  "模板ID"
+// @Param     data  body     smsmodel.SmsProjectIdReq  true  "模板ID"
 // @Success   200   {object}  response.Response{data=object,msg=string}  "获取sms项目"
 // @Router    /txyun/sms/DelSmsProject [post]
 func (e *SmsHandler) DelSmsProject(c *gin.Context) {
@@ -172,4 +172,76 @@ func (e *SmsHandler) DelSmsProject(c *gin.Context) {
 		return
 	}
 	response.OkWithDetailed(project, "删除短信项目成功", c)
+}
+
+// SmsProjectRows
+// @Tags      Txyun
+// @Summary   通过sms项目获取全部数据
+// @Security  ApiKeyAuth
+// @accept    application/json
+// @Produce   application/json
+// @Param     data  body     smsmodel.SmsProjectIdReq  true  "请求参数"
+// @Success   200   {object}  response.Response{data=object,msg=string}  "通过sms项目Id获取全部数据"
+// @Router    /txyun/sms/SmsProjectRows [post]
+func (e *SmsHandler) SmsProjectRows(c *gin.Context) {
+	var req smsmodel.SmsProjectIdReq
+	err := c.Bind(&req)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	rows, err := TxyunService.SmsProjectRows(&req)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	response.OkWithDetailed(rows, "获取成功", c)
+}
+
+// DelSmsProjectRow
+// @Tags      Txyun
+// @Summary   删除sms项目成员
+// @Security  ApiKeyAuth
+// @accept    application/json
+// @Produce   application/json
+// @Param     data  body     smsmodel.SmsProjectRowIdReq  true  "请求参数"
+// @Success   200   {object}  response.Response{data=object,msg=string}  "删除sms项目成员"
+// @Router    /txyun/sms/DelSmsProjectRow [post]
+func (e *SmsHandler) DelSmsProjectRow(c *gin.Context) {
+	var req smsmodel.SmsProjectRowIdReq
+	err := c.Bind(&req)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	rows, err := TxyunService.DelSmsProjectRow(&req)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	response.OkWithDetailed(rows, "删除成功", c)
+}
+
+// AddSmsProjectRow
+// @Tags      Txyun
+// @Summary   添加sms项目成员
+// @Security  ApiKeyAuth
+// @accept    application/json
+// @Produce   application/json
+// @Param     data  body     smsmodel.AddSmsProjectRowReq  true  "请求参数"
+// @Success   200   {object}  response.Response{data=object,msg=string}  "添加sms项目成员"
+// @Router    /txyun/sms/AddSmsProjectRow [post]
+func (e *SmsHandler) AddSmsProjectRow(c *gin.Context) {
+	var req smsmodel.AddSmsProjectRowReq
+	err := c.Bind(&req)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	rows, err := TxyunService.AddSmsProjectRow(&req)
+	if err != nil {
+		response.FailWithMessage(err.Error(), c)
+		return
+	}
+	response.OkWithDetailed(rows, "添加成功", c)
 }
